Fixed white space clicks that direct to corresponding pagesg

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -32,6 +32,7 @@
     text-decoration: none;
     color: black;
     padding: 0.2vw;
+    width: 40%;
 }
 
 .footerLinkContainer h3 {
